# dfb

./: .dockerignore  .gitignore  README.md
dev_from_baseline/: .pylintrc  README.md  pyproject.toml
dev_from_baseline/ci_scripts/: check_newline.sh  semgrep.sh
dev_from_baseline/dev_from_baseline/: __main__.py  baseline.py  common.py  comparison.py  comparison_result.py  counter.py  database_manager.py  linter_comparison.py  main.py  result_table.py  results_printer.py
dev_from_baseline/docs/: classes_dev_from_baseline.plantuml  packages_dev_from_baseline.plantuml
dev_from_baseline/test_files/: basefile.json  basefile_improved.json  golangci_V1.json  golangci_V2.json  npm_audit_V1.json  npm_audit_V2.json  pip_audit_V2.json  trivy_V1.sarif  trivy_V2.sarif
dev_from_baseline/tests/: golangci_params.py  multiple_linters_params.py  not_tracked_linter_params.py  npm_params.py  pipaudit_params.py  semgrep_params.py  test_basefile.py  trivy_params.py
dockerfiles/: base.Dockerfile  go.Dockerfile  (+4 more)
istari_linters/: .pylintrc  README.md  pyproject.toml
istari_linters/istari_linters/: istari.py  linter_versions.py
you_shall_not_parse/: .pylintrc  README.md  pyproject.toml
you_shall_not_parse/design/: classes_parser.plantuml  packages_parser.plantuml
you_shall_not_parse/examples/: bandit.sarif  complexity.csv  empty_mypy.xml  eslint.sarif  gitleaks.sarif  golangci.json  mypy.xml  npm_audit.json  pip-audit-abram.json  pip-audit.json  poetry-audit.json  pylint-abram.json  pylint.json  radon.json  semgrep.sarif  trivy.sarif
you_shall_not_parse/tests/: complexitysimple.csv  golangci_params.py  lizard_params.py  mypy_params.py  npm_params.py  pipaudit_params.py  poetryaudit_params.py  pylint_params.py  radon_params.py  sarif_params.py  test_all.py  test_parser.py  trivy_expected.sarif
you_shall_not_parse/you_shall_not_parse/: base_classes.py  handler_classes.py  observer.py  parser.py
(+23 files in other folders)
